--- a/myPres.html
+++ b/myPres.html
@@ -33,7 +33,10 @@
                 rerum itaque optio!</p>
         </div>
         <div class="item">
-            <p>test</p>
+            <h2>Min fars bil</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/n0LMAx_98cI" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
         <div class="item">
             <p>test</p>
@@ -42,9 +45,9 @@
             <p>test</p>
         </div>
         <div class="item">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, veniam! Architecto a atque fugiat
-                reiciendis. Aut, nobis, totam enim porro blanditiis laudantium dolore eum expedita fugiat distinctio
-                eligendi amet ad.</p>
+            <h2>Hobbyer</h2>
+            <img src="hund.jpg" alt="Min hund">
+            <p>Jeg har en meget pæn lille hund der hedder Bamseline.</p>
         </div>
         <div class="item">
             <p>test</p>
