--- a/myPres.html
+++ b/myPres.html
@@ -34,7 +34,7 @@
         </div>
         <div class="item">
             <h2>Min fars bil</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/n0LMAx_98cI" frameborder="0"
+            <iframe class="frame" width="560" height="315" src="https://www.youtube.com/embed/n0LMAx_98cI" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
