--- a/myPres.html
+++ b/myPres.html
@@ -37,6 +37,8 @@
             <iframe class="frame" width="560" height="315" src="https://www.youtube.com/embed/n0LMAx_98cI" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
+                <img src="Droemmebil.jpg" alt="">
+                <p>Min drømmebil</p>
         </div>
         <div class="item">
             <p>test</p>
