--- a/myPres.html
+++ b/myPres.html
@@ -34,15 +34,14 @@
         </div>
         <div class="item">
             <h2>Min fars bil</h2>
-            <iframe class="frame" width="560" height="315" src="https://www.youtube.com/embed/n0LMAx_98cI" frameborder="0"
+            <iframe class="frame" src="https://www.youtube.com/embed/n0LMAx_98cI"
+                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-                <br>
-                <img src="Droemmebil.jpg" alt="">
-                <p>Min drømmebil</p>
         </div>
         <div class="item">
-            <p>test</p>
+            <h2>Min drømmebil</h2>
+            <img src="Droemmebil.jpg" alt="">
         </div>
         <div class="item">
             <p>test</p>
