--- a/myPres.html
+++ b/myPres.html
@@ -34,8 +34,7 @@
         </div>
         <div class="item">
             <h2>Min fars bil</h2>
-            <iframe class="frame" src="https://www.youtube.com/embed/n0LMAx_98cI"
-                frameborder="0"
+            <iframe class="frame" src="https://www.youtube.com/embed/n0LMAx_98cI" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
@@ -55,6 +54,8 @@
             <p>test</p>
         </div>
     </div>
+    <img
+        src="https://docs.google.com/drawings/d/e/2PACX-1vTJarEwXUdhNgHYBrSkYBk80TI5ztTstLxY0K6cbjp8xgvhfauSIZRVITjPkZbVDDgB0rEtEOjoAuq2/pub?w=1440&amp;h=1491">
 </body>
 
 </html>
