--- a/myPres.html
+++ b/myPres.html
@@ -16,8 +16,11 @@
             <h2>Oversigt over hjemmeside</h2>
             <p><a href="index.html">Startside</a></p>
             <p><a href="index2.html">Anders hjemmeside</a></p>
+            <p><a href="https://github.com/D1C1">github side</a></p>
+
         </div>
         <div class="item">
+            <h2>k2</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto nobis totam omnis, aspernatur
                 obcaecati qui eveniet quam distinctio optio tempora itaque, consectetur consequuntur minus nesciunt
                 officia inventore. Aperiam soluta voluptates facere cum exercitationem, quibusdam aut blanditiis tempora
@@ -26,8 +29,10 @@
         <div class="item">
             <h2>Personlig information</h2>
             <p>Adresse: Thyherredvej 6 4500 Nykøbing SJ.</p>
+            <p>Email: ...</p>
         </div>
         <div class="item">
+            <h2>K4</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere recusandae sunt dolor consequuntur,
                 repellendus dolore impedit fuga nobis enim repudiandae nulla explicabo magni sequi suscipit minima odio
                 rerum itaque optio!</p>
@@ -39,23 +44,26 @@
                 allowfullscreen></iframe>
         </div>
         <div class="item">
+            <h2>K6</h2>
+        </div>
+        <div class="item">
+            
             <h2>Min drømmebil</h2>
             <img src="Droemmebil.jpg" alt="">
         </div>
         <div class="item">
-            <p>test</p>
-        </div>
-        <div class="item">
-            <h2>Hobbyer</h2>
+            <h2>Kæledyr</h2>
             <img src="hund.jpg" alt="Min hund">
             <p>Jeg har en meget pæn lille hund der hedder Bamseline.</p>
         </div>
         <div class="item">
-            <p>test</p>
+            <h2>Eksempel på arbejde</h2>
+            <img src="https://docs.google.com/drawings/d/e/2PACX-1vTJarEwXUdhNgHYBrSkYBk80TI5ztTstLxY0K6cbjp8xgvhfauSIZRVITjPkZbVDDgB0rEtEOjoAuq2/pub?w=1440&amp;h=1491"
+                width="500" height="500">
+            <p>Meget pænt grafik design lavet af mig med hjælp fra mine udviklingspartnere</p>
         </div>
     </div>
-    <img
-        src="https://docs.google.com/drawings/d/e/2PACX-1vTJarEwXUdhNgHYBrSkYBk80TI5ztTstLxY0K6cbjp8xgvhfauSIZRVITjPkZbVDDgB0rEtEOjoAuq2/pub?w=1440&amp;h=1491">
+
 </body>
 
 </html>
