--- a/myPres.html
+++ b/myPres.html
@@ -34,9 +34,18 @@
         </div>
         <div class="item">
             <h2>K4</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere recusandae sunt dolor consequuntur,
-                repellendus dolore impedit fuga nobis enim repudiandae nulla explicabo magni sequi suscipit minima odio
-                rerum itaque optio!</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi quod a reprehenderit id minima.
+                Reprehenderit vitae similique dicta incidunt repellat laboriosam fuga provident facilis iure modi
+                officia dolor ab tenetur cum, ex molestiae necessitatibus ducimus praesentium libero architecto, maiores
+                nemo soluta mollitia. Voluptates culpa blanditiis nostrum consequuntur cum facere distinctio odio, in
+                quo commodi quam reprehenderit aliquid eum error, fuga officia possimus tempore incidunt? Temporibus
+                laboriosam, pariatur ea accusamus maiores ratione quas dolor, quia fugit dolorum labore porro beatae
+                repellendus hic sint molestias asperiores explicabo eaque? Laboriosam perferendis labore quaerat minus
+                est, provident sunt minima similique repellendus temporibus aliquam ratione. Est tempore voluptatibus
+                eaque hic, neque sit exercitationem praesentium dolore placeat dicta molestias maiores nostrum, optio
+                quis quisquam, odit non esse perferendis minima libero. Doloribus consequuntur alias reiciendis quas
+                voluptatibus blanditiis earum. Autem debitis maxime aspernatur veniam quae placeat nisi ab magni, quo
+                rerum laborum quis expedita, quos quasi quod?</p>
         </div>
         <div class="item">
             <h2>Min fars bil</h2>
@@ -48,7 +57,7 @@
             <h2>K6</h2>
         </div>
         <div class="item">
-            
+
             <h2>Min drømmebil</h2>
             <img src="Droemmebil.jpg" alt="">
         </div>
