--- a/anotherOne.html
+++ b/anotherOne.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="mystyle.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Document</title>
     <div class="jumbotron text-center">
         <img src="source.gif" alt="" width="50" height="50"><h1>Welcome</h1><img src="source.gif" alt="" width="50" height="50">
