--- a/myPres.html
+++ b/myPres.html
@@ -34,7 +34,8 @@
             <p>Email: ...</p>
         </div>
         <div class="item">
-            <h2>K4</h2>
+            <h2>Hvem er Morten</h2>
+            <h3>K4</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi quod a reprehenderit id minima.
                 Reprehenderit vitae similique dicta incidunt repellat laboriosam fuga provident facilis iure modi
                 officia dolor ab tenetur cum, ex molestiae necessitatibus ducimus praesentium libero architecto, maiores
@@ -55,10 +56,10 @@
                 allowfullscreen></iframe>
         </div>
         <div class="item">
-            <h2>K6</h2>
+            <h2>Tidligere arbejde</h2>
+            <h3>K6</h3>
         </div>
         <div class="item">
-
             <h2>Min drømmebil</h2>
             <img src="Droemmebil.jpg" alt="">
         </div>
