--- a/myPres.html
+++ b/myPres.html
@@ -51,7 +51,7 @@
         </div>
         <div class="item">
             <h2>Min fars bil</h2>
-            <iframe class="frame" src="https://www.youtube.com/embed/n0LMAx_98cI" frameborder="0"
+            <iframe class="frame" src="https://www.youtube.com/embed/n0LMAx_98cI"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
@@ -71,7 +71,7 @@
         <div class="item">
             <h2>Eksempel på arbejde</h2>
             <img src="https://docs.google.com/drawings/d/e/2PACX-1vTJarEwXUdhNgHYBrSkYBk80TI5ztTstLxY0K6cbjp8xgvhfauSIZRVITjPkZbVDDgB0rEtEOjoAuq2/pub?w=1440&amp;h=1491"
-                width="500" height="500">
+                width="500" height="500" alt="Eksempel arbejde">
             <p>Meget pænt grafik design lavet af mig med hjælp fra mine udviklingspartnere</p>
         </div>
     </div>
